# genai-stack

./: .gitignore  AUTHORS.rst  CITATION.cff  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  alembic.ini  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  test_text_loader.py  text_loader.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-publish.yml
assets/: config.json  config_custom_chromadb.json  config_custom_embedding.json  custom_model.json  etl.json  gpt3.json  gpt4all.json  retrieval_config.json
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/components/: ETL.md  Model.md  README.md  Retreiver.md  VectorDB.md
documentation/: README.md  SUMMARY.md  contributing.md.md
documentation/components/: introduction.md
documentation/data-loading-etl/: data-loaders.md  how-to-use-data-loaders.md  supported-data-loaders.md
documentation/example-use-cases/: chat-on-pdf-with-ui.md  chat-on-pdf.md  chat-on-webpage.md
documentation/fundamentals/: contributing.md.md
documentation/getting-started/: data-extraction-and-loading.md  default-data-types.md  installation-1.md  installation.md  introduction.md  quickstart-with-colab.md  vector-database.md
documentation/v0.1.0/: SUMMARY.md
documentation/v0.2.0/: README.md  SUMMARY.md  contributing.md.md
documentation/vector-database/: how-to-use-vector-database.md  supported-vector-databases.md
example_use_cases/: Information_Retrieval_Pipeline_genai_stack_demo.ipynb  RAG_Pipeline.ipynb  chat_with_multiple_website.ipynb
examples/chat_on_pdf/: Readme.md  etl.json  model.json
genai_stack/: __init__.py  cli.py  constant.py  enum_utils.py  enums.py  exception.py  logger.py
llaim/: __init__.py  cli.py  exception.py
llm_stack/: __init__.py  cli.py  exception.py
rest_api/: database.py  main.py  server.conf  urls.py
sandbox/: my_retrieval_config.json
tests/: __init__.py  test_embedding.py  test_etl.py  test_etl_platform.py  test_llaim.py  test_llm_cache.py  test_llm_stack.py  test_memory.py  test_model.py  test_prompt_engine.py  test_retriever.py  test_vectordb.py
ui/: Readme.md  package.json  requirements.txt  tsconfig.json
(+424 files in other folders)
